# canonical-cbor-conformance

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  decode-vector.schema.json  logical-value.schema.json  requirements.txt
.github/workflows/: conformance.yml
adapters/c/: Makefile  README.md
adapters/go/: README.md  dcbor.go  dcbor_test.go  decode.go  decode_test.go  float16.go  float16_test.go  logicalvalue.go  logicalvalue_test.go  main.go  nfc.go  nfc_tables.go  nfc_test.go  rfc8949.go  rfc8949_test.go  util.go
adapters/java/: README.md  build.gradle.kts
adapters/kotlin/: README.md  build.gradle.kts
adapters/python/: README.md  dcbor.py  decode.py  errors.py  float16.py  logical_value.py  main.py  rfc8949.py  test_dcbor.py  test_decode.py  test_float16.py  test_logical_value.py  test_rfc8949.py  util.py
adapters/rust/: Cargo.toml  README.md
adapters/rust/fuzz/: Cargo.toml
adapters/rust/fuzz/fuzz_targets/: dcbor.rs  rfc8949.rs
adapters/rust/fuzz/src/: lib.rs
adapters/typescript/: README.md  package-lock.json  package.json  tsconfig.json
harness/: adapters.json  report_markdown.py  run.py
oracle/: Gemfile  README.md  dcbor_oracle.py  dcbor_oracle.rb  dcbor_oracle_batch.rb  rfc8949_oracle.py
scripts/: generate-fuzz-corpus.py  generate_handwritten_vectors.py
tests/: test_dcbor_oracle.py  test_handwritten_vectors_dcbor.py  test_handwritten_vectors_rfc8949.py  test_harness.py  test_harness_rust_integration.py  test_logical_value_schema.py  test_manifest.py  test_rfc8949_oracle.py  test_spec_completeness.py
(+118 files in other folders)
