[package]
name = "adapter-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lib]
name = "adapter_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.adapter]
path = ".."

[[bin]]
name = "rfc8949"
path = "fuzz_targets/rfc8949.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dcbor"
path = "fuzz_targets/dcbor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
test = false
doc = false
bench = false
